--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ name = pykuklin
 description = Add a short description here!
 author = Kuklin István Alexander
 author-email = istvan@codekuklin.com
-license = mit
+license = apache2
 long-description = file: README.rst
 long-description-content-type = text/x-rst; charset=UTF-8
 url = https://github.com/pyscaffold/pyscaffold/
