gitignore generator cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ package_dir =
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
 # install_requires = numpy; scipy
+install_requires = ipdb; click; pyyaml
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
@@ -59,6 +60,11 @@ testing =
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
+# console_scripts =
+#     script_name = pykuklin.module:function
+console_scripts =
+    pykuklin = pykuklin.cli:cli_entry
+
 
 [test]
 # py.test options when running `python setup.py test`
